feat: improve animation

--- a/src/content/blog/web-renewal.mdx
+++ b/src/content/blog/web-renewal.mdx
@@ -1,10 +1,10 @@
 ---
 title: Webサイトをリニューアルしました
-pubDate: 2024-12-11
+pubDate: 2024-12-15
 ---
 
 ようやくWebサイトをリニューアルすることができました。ドメイン自体は9月頃に取っていたんですが、いろいろとやっていたらこんな時期になっていました。気づいたら今年ももう終わろうとしていますね...
 
-4月から本格的にWebをやり始めたこともあり、旧サイトに比べてだいぶ進歩した気がします。
+サイトを作るにあたって一からデザインを組んでみたんですが、なかなか大変でした。デザインって難しい。
 
-このサイトを作るにあたって一からデザインを組んでみたんですが、なかなか大変でした。デザインって難しい。
+まだ実装できていない機能もあるので少しずつやっていくぞ～。
