feat: add download links

--- a/src/content/work/toplock.mdx
+++ b/src/content/work/toplock.mdx
@@ -4,6 +4,12 @@ description: "ウィンドウを常に前面に固定できるアプリです。
 icon: "/src/assets/works/toplock/toplock.png"
 ---
 
+import DownloadButton from "../../components/DownloadButton.astro";
+
+<div>
+  <DownloadButton href="/works/download/toplock.zip"></DownloadButton>
+</div>
+
 TopLockは指定されたウィンドウを最前面に固定してくれるアプリです。通常では最前面固定に対応していないアプリであっても構いません。推しの配信を見ながら作業したい、攻略を見ながらゲームしたいといった昨今の二窓欲求に対応しております。
 
 また、実験的機能ですがウィンドウをフルスクリーン表示することもできます。この機能はフルスクリーン対応していないアプリも問答無用でフルスクリーンにしてしまうので、表示崩れなどの不具合を引き起こす可能性があります。ご了承ください。
