--- a/src/content/work/keyboard.mdx
+++ b/src/content/work/keyboard.mdx
@@ -4,6 +4,12 @@ icon: "/src/assets/works/keyboard/keyboard.svg"
 description: "お手持ちのキーボードをピアノ（MIDIキーボード）として使えるようにするアプリです。"
 ---
 
+import DownloadButton from "../../components/DownloadButton.astro";
+
+<div>
+  <DownloadButton href="/works/download/samidarekeyboard.zip"></DownloadButton>
+</div>
+
 SamidareKeyboardは簡易的な仮想MIDIキーボードです。手元にMIDIキーボードがない（もしくはそんなもの置くスペースor金がない）時に便利かもしれません。
 
 <video src="/works/keyboard/keyboard-test.mp4" controls></video>
