feat: add blog article

--- a/src/content/blog/web-renewal.mdx
+++ b/src/content/blog/web-renewal.mdx
@@ -3,7 +3,9 @@ title: Webサイトをリニューアルしました
 pubDate: 2024-12-15
 ---
 
-ようやくWebサイトをリニューアルすることができました。ドメイン自体は9月頃に取っていたんですが、いろいろとやっていたらこんな時期になっていました。気づいたら今年ももう終わろうとしていますね...
+ようやくWebサイトをリニューアルすることができました。
+
+ドメイン自体は9月頃に取っていたんですが、いろいろとやっていたらこんな時期になっていました。気づいたら今年ももう終わろうとしていますね...
 
 サイトを作るにあたって一からデザインを組んでみたんですが、なかなか大変でした。デザインって難しい。
 
