fix: blog image links

--- a/src/content/blog/history-auto-generation.mdx
+++ b/src/content/blog/history-auto-generation.mdx
@@ -18,11 +18,11 @@ Pull Requestの情報を得るには[GitHub Rest API](https://docs.github.com/ja
 
 Repository access→Only select repositoriesを選択し、Pull Requestを取得したいリポジトリを指定する。
 
-![Only select repositoriesを選択するとSelect repositoriesというプルダウンが出てくるのでここからリポジトリを指定する。](../..\assets\blog\history-auto-generation\repository-access.png)
+![Only select repositoriesを選択するとSelect repositoriesというプルダウンが出てくるのでここからリポジトリを指定する。](../../assets/blog/history-auto-generation/repository-access.png)
 
 そして、Permissions→Repository permissions→Pull requestsをAccess: Read-onlyに設定する。（このとき、Metadataも自動的にRead-onlyになる。）
 
-![](../..\assets\blog\history-auto-generation\permissions.png)
+![](../../assets/blog/history-auto-generation/permissions.png)
 
 トークンは.envに追加しておく。
 
