--- a/src/content/blog/history-auto-generation.mdx
+++ b/src/content/blog/history-auto-generation.mdx
@@ -1,6 +1,7 @@
 ---
 title: AstroでPullRequestから更新履歴を自動生成してみた
 pubDate: 2024-12-21
+image: "/blog/history_auto_generation_og.png"
 ---
 
 人は愚かなので、自分のサイトに更新履歴という項目を作ったとしても、必ずしも毎回更新履歴をupdateできるとは限らない。
