--- a/src/content/blog/eclipse-c-install.mdx
+++ b/src/content/blog/eclipse-c-install.mdx
@@ -1,7 +1,7 @@
 ---
 title: C言語のためのEclipse環境構築
 pubDate: 2025-04-17
-image: "blog/change_registrar.png"
+image: "blog/eclipse-c-install.png"
 ---
 
 import Contents from "../../components/Contents.astro";
