--- a/src/content/work/keyboard.mdx
+++ b/src/content/work/keyboard.mdx
@@ -2,6 +2,7 @@
 name: "SamidareKeyboard 1.2.7"
 icon: "/src/assets/works/keyboard/keyboard.svg"
 description: "お手持ちのキーボードをピアノ（MIDIキーボード）として使えるようにするアプリです。"
+pubDate: 2024-12-15
 ---
 
 import DownloadButton from "../../components/DownloadButton.astro";
