--- a/src/content/work/toplock.mdx
+++ b/src/content/work/toplock.mdx
@@ -2,6 +2,7 @@
 name: "TopLock 2.1.0"
 description: "ウィンドウを常に前面に固定できるアプリです。フルスクリーン化することも可能です。"
 icon: "/src/assets/works/toplock/toplock.png"
+pubDate: 2024-12-15
 ---
 
 import DownloadButton from "../../components/DownloadButton.astro";
