--- a/src/content/work/toplock.mdx
+++ b/src/content/work/toplock.mdx
@@ -7,7 +7,7 @@ pubDate: 2024-12-15
 
 import DownloadButton from "../../components/DownloadButton.astro";
 
-<div>
+<div class="button_container">
   <DownloadButton href="/works/download/toplock.zip"></DownloadButton>
 </div>
 
