feat: r2にzipファイルを移行

--- a/src/content/work/keyboard.mdx
+++ b/src/content/work/keyboard.mdx
@@ -8,7 +8,7 @@ pubDate: 2024-12-15
 import DownloadButton from "../../components/DownloadButton.astro";
 
 <div class="button_container">
-  <DownloadButton href="/works/download/samidarekeyboard.zip"></DownloadButton>
+  <DownloadButton href="https://r2.nito008.com/SamidareKeyboard.zip"></DownloadButton>
 </div>
 
 SamidareKeyboardは簡易的な仮想MIDIキーボードです。手元にMIDIキーボードがない（もしくはそんなもの置くスペースor金がない）時に便利かもしれません。
