--- a/src/content/work/toplock.mdx
+++ b/src/content/work/toplock.mdx
@@ -8,7 +8,7 @@ pubDate: 2024-12-15
 import DownloadButton from "../../components/DownloadButton.astro";
 
 <div class="button_container">
-  <DownloadButton href="/works/download/toplock.zip"></DownloadButton>
+  <DownloadButton href="https://r2.nito008.com/toplock.zip"></DownloadButton>
 </div>
 
 TopLockは指定されたウィンドウを最前面に固定してくれるアプリです。通常では最前面固定に対応していないアプリであっても構いません。推しの配信を見ながら作業したい、攻略を見ながらゲームしたいといった昨今の二窓欲求に対応しております。
